--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 </script>  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Microsoft Customer Service</title>
+  <title>Apple Customer Service</title>
   <style>
     body {
       font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -69,10 +69,10 @@
 
   
 <!-- <img src="./ss.png" alt="pple Logo" class="pple-logo"> -->
-  <h1>Microsoft Customer Service</h1>
+  <h1>Apple Customer Service</h1>
     <a href="tel:+1 (844) 906-6206" class="call-button">Call +1 (888) 540-1911</a>
-  <p>For any assistance or inquiries related to microsoft products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your microsoft account, require assistance with your microsoft account, or need guidance with microsoft services, our experts are just a phone call away. Experience exceptional support from microsoft.</p>
-  <a href="tel:+1 (844) 906-6206" class="call-button">Contact microsoft Support</a>
-  <p class="footer">© 2024 microsoft Inc. All rights reserved.</p>
+  <p>For any assistance or inquiries related to apple products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your apple account, require assistance with your apple account, or need guidance with apple services, our experts are just a phone call away. Experience exceptional support from apple.</p>
+  <a href="tel:+1 (844) 906-6206" class="call-button">Contact apple Support</a>
+  <p class="footer">© 2024 apple Inc. All rights reserved.</p>
 
 </body>
